Source/dlls
  File "LowCal.py", line 154
    pm = PartitioningManager.PartitioningManager(params['k'], self.distType)
     ^
SyntaxError: invalid syntax
